@@ -1,6 +1,6 @@
 /** bug-2995.c
     Getting the address of an object in a named address space was
-    considered a read acces of that space resulting in inefficiencies
+    considered a read access of that space resulting in inefficiencies
     (i.e. unnecessary calls to the function for switching address spaces).
 */
 
@@ -19,9 +19,9 @@ void set_b(void)
   b_accessed = true;
 }
 
-#if !defined(PORT_HOST)
+#if !defined(PORT_HOST) && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) && !defined(__SDCC_mcs51) // For pdk14, pdk15 and mcs51: Need to pass segment ordering to linker somehow, to place space_a somewhere in RAM.
 __addressmod set_a space_a;
-__addressmod set_b const space_b;
+__addressmod set_b space_b;
 
 space_a int i; 
 space_a int *space_b j;
@@ -29,9 +29,10 @@ space_a int *space_b j;
 
 void testSpace(void)
 {
-#if !defined(PORT_HOST)
+#if !defined(PORT_HOST) && !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) && !defined(__SDCC_mcs51)
   j = &i;
   ASSERT (!a_accessed);
   ASSERT (b_accessed);
 #endif
 }
+
